--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "eslint": "^7.4.0",
+    "express": "^4.17.1",
     "moment": "^2.27.0",
     "node-fetch": "^2.6.0"
   }
